--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://www.trygb.sbs/php/">
+  <meta http-equiv="refresh" content="0;url=https://t.me/godoflooter">
 </head>
 <body></body>
 </html>
