--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/godoflooter">
+  <meta http-equiv="refresh" content="0;url=https://www.facebook.com/flx/warn/?u=https%3A%2F%2Feadyckxy.info%2F22642Jodie%3Futm_source%3Dfb%26utm_medium%3DFacebook_Mobile_Feed%26fbclid%3DIwAR2xs1e2xfHptj_YO3sO0s-5CGLVaLlXd5U77ZqPIMkhl-M8TalxlKV1GZU&h=AT0STeURSDeHobdamTMUpeJPuvCoGimalHzTytr3kzE2drPC5hb3ntwPo8yJvgPYGVwTdD3NUwbame8mxyqkVvyPcqks1D3bh75LMJs5Q7yQ_0FI83niF8G-TSB5oc2E9AaCoBpm08Zv&__tn__=-UK-R&c[0]=AT3X3ijm0GeBbZWDqjkaNF4fjJbYTvaXQ386r-40yREP_2gQbMaKiXPcOh9CQaZzFHoTggTmyaF4RpfsDX9ztqli8v224KN1kfdDqsQBtYf6-2Rj2l6cOZknwkvLV2HHmo38XSg24BzRHz-AexWAcHEwn03z3ncZO6PDEn732fz5">
 </head>
 <body></body>
 </html>
